# cpp-adas-vehicle-simulator

./: CMakeLists.txt  README.md
include/: Executor.hpp
script/: run.bat
src/: ActionGroup.cpp  ActionGroup.hpp  CmdFactory.cpp  CmderFactory.cpp  CmderFactory.hpp  Command.hpp  Direction.hpp  ExecutorImpl.cpp  ExecutorImpl.hpp  Point.cpp  Point.hpp  PoseHandler.cpp  PoseHandler.hpp
src/cmder/: ActionGroup.cpp  ActionGroup.hpp  BusOrchestrator.hpp  CmderFactory.cpp  CmderFactory.hpp  CmderOrchestrator.hpp  Command.hpp  NormalOrchestrator.hpp  SportsCarOrchestrator.hpp
src/core/: Direction.cpp  Point.cpp  PoseHandler.hpp  Singleton.hpp
tests/: BusTest.cpp  CMakeLists.txt  ExecutorFastTest.cpp  ExecutorReverseTest.cpp  ExecutorTest.cpp  ExecutorTurnRoundTest.cpp  PoseEQ.cpp  SportsCarTest.cpp
学习文档/: 实验4的补充知识V2.pptx
